# skooly

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  mypy.ini  pre-commit-config.yaml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml  deploy.yml
apps/academics/: api.py  bulk_import.py  models.py  parent_api.py  schemas.py  schemas_in.py  services_write.py  teacher_api.py  teacher_schemas.py  teacher_services.py
apps/accounts/: admin.py  admin_api.py  api.py  auth.py  models.py  parent_api.py  parent_auth.py  parent_schemas.py  parent_services.py  schemas.py  services.py  teacher_api.py  teacher_auth.py  teacher_schemas.py
apps/attendance/: api.py  apps.py  models.py  parent_api.py  schemas.py  services.py  teacher_api.py  teacher_schemas.py  teacher_services.py
apps/communications/: api.py  apps.py  models.py  parent_api.py  teacher_api.py
apps/core/: audit.py  context.py  exceptions.py  helpers.py  middleware.py  models.py  pagination.py  permissions.py  rls.py  schemas.py  storage.py
apps/exams/: admin_report_services.py  api.py  apps.py  exam_name_services.py  models.py  parent_api.py  question_bank_services.py  radar_services.py  report_card_pdf.py  schemas.py  services.py  teacher_api.py  teacher_schemas.py  teacher_services.py
apps/fees/: api.py  apps.py  models.py  parent_api.py  schemas.py  (+2 more)
config/: api.py  asgi.py  celery.py  urls.py  wsgi.py
deployment/: .env.prod.example  DEPLOY.md  deploy.sh  docker-compose.prod.yml  entrypoint.sh
docs/: backlog.md  progress.md
(+109 files in other folders)
