[project]
name = "skooly"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery>=5.6.3",
    "django>=6.0.5",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.3",
    "django-ninja-jwt>=5.4.4",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
    "redis>=7.4.0",
    "sentry-sdk[django]>=2.60.0",
    "weasyprint>=68.1",
    "whitenoise>=6.8.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "factory-boy>=3.3.3",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.13",
]
